Finish lab 2