@@ -14,12 +14,12 @@ public final class SealRemoveCommand extends AbstractCommand {
     @Override
     public void validateArgs(List<String> args) {
         ensureArgCount(args, 1);
-        parseId(args.getFirst(), "seal_id");
+        parseId(args.get(0), "seal_id");
     }
 
     @Override
     public CommandExecutionResult execute(CliContext context, List<String> args) {
-        long sealId = parseId(args.getFirst(), "seal_id");
+        long sealId = parseId(args.get(0), "seal_id");
         Seal seal = context.getSealService().remove(sealId);
         System.out.println("OK seal_id=" + seal.getId() + " removed");
         return CommandExecutionResult.CONTINUE;
